--- a/src/component/TodoList.css
+++ b/src/component/TodoList.css
@@ -1,7 +1,43 @@
+.todolist__list {
+        display: flex;
+        max-width: 500px;
+        grid-gap: 20px;
+        gap: 20px;
+        padding: 10px;
+        background-color: aliceblue;
+        margin: 10px;
+        border-bottom: 1px solid #9e9e9e;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
+        cursor: pointer;
+}
+
 .todolist {
-    display: flex;
-    max-width: 500px;
-    gap: 20px;
-    background-color: aliceblue;
-    margin: 10px;
+    min-width: 500px;
+        display: flex;
+        flex-direction: column;
+        background: aliceblue;
+        border-radius: 10px;
+}
+
+.todolist__todo {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.todolist__status {
+    padding: 5px;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.in_progress {
+    background-color: rgb(255, 179, 37);
+}
+.completed {
+    background-color: rgb(0, 180, 0);
+}
+.todo {
+    background-color: rgb(30, 146, 255);
 }
